HTML & CSS Are Completed of Myntra Project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,112 @@
             
         </div>
     </header>
-    <main>Main</main>
-    <footer>Footer</footer>
+    <main>
+        <div class="bannner-Section">
+            <img class="banner-image" src="/images/banner.jpg" alt="BannerImage">
+        </div>
+        <div class="catogery-heading">
+            <h4 class="heading-title">Medal worthy brands to bag</h4>
+        </div>
+        <div class="catogery-items">
+            <a href="#"><img src="/images/offers/1.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/2.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/3.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/4.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/5.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/6.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/7.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/8.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/9.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/10.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/11.png" class="sale-item"></a>
+            <a href="#"><img src="/images/offers/12.png" class="sale-item"></a>
+        </div>
+        <div class="catogery-heading">
+            <h4 class="heading-title">Shop by category</h4>
+        </div>
+        <div class="catogery-items">
+            <a href="#"><img src="/images/categories/1.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/2.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/3.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/4.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/5.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/6.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/7.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/8.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/9.jpg" class="sale-item"></a>
+            <a href="#"><img src="/images/categories/10.jpg" class="sale-item"></a>
+        </div>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Home & Living</a>
+                <a href="#">Beauty</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Myntra insider</a>
+                <div class="footer-column">
+                    <h3>USEFUL LINKS</h3>
+                    <a href="#">Blog</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Site Map</a>
+                    <a href="#">Corporate Information</a>
+                    <a href="#">Whitehat</a>
+                    <a href="#">Cleartrip</a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3>CUSTOMER POLICIES</h3>
+                <a href="#">Contact Us</a>
+                <a href="#">FAQ</a>
+                <a href="#">T&C</a>
+                <a href="#">Term Of Use</a>
+                <a href="#">Track Orders</a>
+                <a href="#">Shipping</a>
+                <a href="#">Cancellation</a>
+                <a href="#">Returns</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Grievance Officer</a>
+            </div>
+            <div class="footer-column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Home & Living</a>
+                <a href="#">Beauty</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Myntra insider</a>
+            </div>
+            <div class="footer-column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Home & Living</a>
+                <a href="#">Beauty</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Myntra insider</a>
+            </div>
+            <div class="footer-column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Home & Living</a>
+                <a href="#">Beauty</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Myntra insider</a>
+            </div>
+        </div>
+        <hr>
+        <div class="copywright">
+            <h3>&copy; Made By Hitesh jangir</h3>
+        </div>
+    </footer>
 </body>
 </html>
